--- a/config.yml
+++ b/config.yml
@@ -1,18 +1,18 @@
 servers:
   paper:
-    motd: '&b&lServidor Paper 1.21.8'
-    address: 91.197.5.213:26666  # Dominio de MineStrator
+    motd: '&b&lTu Servidor Paper 1.21.8'
+    address: 91.197.5.213:26666  # Reemplaza con tu dominio de MineStrator
     restricted: false
     hidden: false
-    max_players: 50
+    max_players: 20
 listeners:
   - query_port: 26666
     motd: '&1Proxy para EaglerCraft'
     priorities:
       - paper
     bind_local_address: true
-    host: 0.0.0.0:26666  # Puerto 26666 para TCP
-    max_players: 50
+    host: 0.0.0.0:26666
+    max_players: 20
     tab_size: 60
     force_default_server: true
     ping_passthrough: false
